--- a/test.html
+++ b/test.html
@@ -6,171 +6,110 @@
     <title>Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
-    <style>
-        @font-face {
-            font-family: 'RaelaGrotesque';
-            src: url('fonts/RaelaGrotesque-Regular.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        @font-face {
-            font-family: 'JazzyRabbit';
-            src: url('fonts/JazzyRabbit.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        h2 {
-            font-size: 45px;
-            font-family: 'JazzyRabbit', Arial, sans-serif;
-        }
-        *:hover {
-          display: none;
-        }
-        h1 {
-            font-family: 'JazzyRabbit', Arial, sans-serif;
-        }
-        body {
-            background-color: black;
-            color: white;
-            font-family: "Irish Grover";
-            font-weight: 400;
-            font-style: normal;
-            margin: 0;
-            text-align: center;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-            background: black;
-            border-bottom: 2px solid purple;
-            font-family: 'JazzyRabbit', Arial, sans-serif;
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .logo img {
-            height: 40px;
-            margin-right: 10px;
-        }
-        .nav {
-            display: flex;
-            gap: 15px;
-            position: relative;
-        }
-        .nav a {
-            text-decoration: none;
-            color: white;
-            background: purple;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        .nav a:hover {
-            background: #4a014a;
-        }
-        .dropdown {
-            position: relative;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: purple;
-            min-width: 120px;
-            box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-            z-index: 1;
-            border-radius: 5px;
-        }
-        .dropdown-content a {
-            color: white;
-            padding: 10px;
-            display: block;
-            text-align: left;
-        }
-        .dropdown-content a:hover {
-            background-color: #800080;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-        .content {
-            margin-top: 50px;
-            padding: 20px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
 
-    </style>
 </head>
 <body>
-    <!-- Modern Navigation Header -->
-    <header class="header">
-        <div class="nav-container">
+    <!-- Simple Navigation -->
+    <nav class="navbar">
+        <div class="nav-content">
             <a href="index.html" class="logo">
-                <img src="favicon.ico" alt="Mod-Sauce Logo">
+                <img src="favicon.ico" alt="Logo">
                 Mod-Sauce Dev's
             </a>
 
-            <nav class="nav">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <div class="dropdown">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li class="dropdown">
                     <a href="#">Projects ▼</a>
-                    <div class="dropdown-content">
+                    <div class="dropdown-menu">
                         <a href="impr.html">IMP Renewed</a>
-                        <a href="oer.html">Ore Excavation</a>
+                        <a href="oer.html">Otyacraft Engine Renewed</a>
                     </div>
-                </div>
-            </nav>
+                </li>
+            </ul>
 
-            <div class="mobile-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
+            <button class="theme-toggle" onclick="toggleTheme()">🌙 Dark</button>
+
+            <div class="mobile-toggle">
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
             </div>
         </div>
-    </header>
-    <div class="content">
-        <h1>Welcome to Mod-Sauce Dev's</h1>
-        <p>Hello and welcome to our website! Here you can find our projects and learn more about what we do as Minecraft mod developers.</p>
-        <p>Visit our Projects page to explore our mods, or check out the About page to learn more about us.</p>
-        <h2>What We Do</h2>
-        <p>We specialize in repairing and updating Minecraft mods that are no longer being developed. Our goal is to bring old mods back to life and ensure they remain compatible with newer versions of the game.</p>
-        <p>Our team is dedicated to keeping these mods functional and improving them where possible while staying true to their original vision.</p>
-        <h2>Stay Connected</h2>
-        <p>Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> to stay updated on new releases, discuss modding, and connect with our community.</p>
-        <p>We appreciate your support and look forward to bringing more mods back to life!</p>
-    </div>
-    <script>
-        const mobileMenu = document.querySelector('.mobile-menu');
-        const nav = document.querySelector('.nav');
+    </nav>
 
-        mobileMenu.addEventListener('click', () => {
-            nav.classList.toggle('active');
-            mobileMenu.classList.toggle('active');
+    <!-- Main Content -->
+    <main class="main-content">
+        <h1>Test Page</h1>
+        <p>This is a test page to verify the design consistency.</p>
+
+        <div class="card">
+            <h2>What We Do</h2>
+            <p>We specialize in repairing and updating Minecraft mods that are no longer being developed. Our goal is to bring old mods back to life and ensure they remain compatible with newer versions of the game.</p>
+            <p>Our team is dedicated to keeping these mods functional and improving them where possible while staying true to their original vision.</p>
+        </div>
+
+        <div class="card">
+            <h2>Stay Connected</h2>
+            <p>Join our Discord community for updates and support:</p>
+            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
+        </div>
+    </main>
+    <script>
+        // Mobile menu functionality
+        const mobileToggle = document.querySelector('.mobile-toggle');
+        const navLinks = document.querySelector('.nav-links');
+
+        mobileToggle.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            mobileToggle.classList.toggle('active');
         });
 
         // Close mobile menu when clicking on a link
-        nav.addEventListener('click', (e) => {
+        navLinks.addEventListener('click', (e) => {
             if (e.target.tagName === 'A') {
-                nav.classList.remove('active');
-                mobileMenu.classList.remove('active');
+                navLinks.classList.remove('active');
+                mobileToggle.classList.remove('active');
             }
         });
 
         // Close mobile menu when clicking outside
         document.addEventListener('click', (e) => {
-            if (!nav.contains(e.target) && !mobileMenu.contains(e.target)) {
-                nav.classList.remove('active');
-                mobileMenu.classList.remove('active');
+            if (!navLinks.contains(e.target) && !mobileToggle.contains(e.target)) {
+                navLinks.classList.remove('active');
+                mobileToggle.classList.remove('active');
+            }
+        });
+
+        // Theme toggle functionality
+        function toggleTheme() {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+            const themeButton = document.querySelector('.theme-toggle');
+
+            document.documentElement.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+
+            // Update button text
+            if (newTheme === 'light') {
+                themeButton.textContent = '☀️ Light';
+            } else {
+                themeButton.textContent = '🌙 Dark';
+            }
+        }
+
+        // Load saved theme on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = localStorage.getItem('theme') || 'dark';
+            const themeButton = document.querySelector('.theme-toggle');
+
+            document.documentElement.setAttribute('data-theme', savedTheme);
+
+            if (savedTheme === 'light') {
+                themeButton.textContent = '☀️ Light';
+            } else {
+                themeButton.textContent = '🌙 Dark';
             }
         });
     </script>
