--- a/impr.html
+++ b/impr.html
@@ -27,6 +27,7 @@
                         <a href="oer.html">Otyacraft Engine Renewed</a>
                     </div>
                 </li>
+                <li><button class="mobile-theme-toggle" onclick="toggleTheme()">🌙 Dark</button></li>
             </ul>
 
             <button class="theme-toggle" onclick="toggleTheme()">🌙 Dark</button>
@@ -38,23 +39,38 @@
             </div>
         </div>
     </nav>
-    <div class="content">
+    <!-- Main Content -->
+    <main class="main-content">
         <h1>IMPR (Iam Music Player Renewed)</h1>
         <p>IMPR, or Iam Music Player Renewed, is our revived and updated version of the classic Iam Music Player mod for Minecraft. We've taken the original mod and brought it back to life, ensuring it's compatible with modern Minecraft versions.</p>
-        <h2>About Iam Music Player</h2>
-        <p>The original Iam Music Player allowed players to add and play custom music within Minecraft. It was a beloved mod that added a new layer of immersion to the game. However, it was no longer maintained and became incompatible with newer versions.</p>
-        <h2>IMPR's Features</h2>
-        <ul>
-            <li><strong>Custom Music Playback:</strong> Easily add and play your favorite music in-game.</li>
-            <li><strong>Continued Support:</strong> We are committed to maintaining and updating IMP.</li>
-        </ul>
-        <h2>Our Goal</h2>
-        <p>Our goal with IMP is to bring back the joy of custom music to Minecraft players. We want to ensure that this fantastic mod continues to be available for everyone to enjoy.</p>
-        <h2>Download and Support</h2>
-        <p>You can find the Mod on <a href="https://modrinth.com/mod/iam-music-player-renewed">Modrinth</a> and <a href="https://www.curseforge.com/minecraft/mc-mods/iammusicplayer-renewed">Curseforge</a> </p>
-        <p>Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on IMPR's development.</p>
-        <p>Thank you for supporting IMPR!</p>
-    </div>
+
+        <div class="card">
+            <h2>About Iam Music Player</h2>
+            <p>The original Iam Music Player allowed players to add and play custom music within Minecraft. It was a beloved mod that added a new layer of immersion to the game. However, it was no longer maintained and became incompatible with newer versions.</p>
+        </div>
+
+        <div class="card">
+            <h2>IMPR's Features</h2>
+            <ul>
+                <li><strong>Custom Music Playback:</strong> Easily add and play your favorite music in-game.</li>
+                <li><strong>Continued Support:</strong> We are committed to maintaining and updating IMP.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>Our Goal</h2>
+            <p>Our goal with IMP is to bring back the joy of custom music to Minecraft players. We want to ensure that this fantastic mod continues to be available for everyone to enjoy.</p>
+        </div>
+
+        <div class="card">
+            <h2>Download and Support</h2>
+            <p>You can find the Mod on these platforms:</p>
+            <a href="https://modrinth.com/mod/iam-music-player-renewed" class="btn">Download on Modrinth</a>
+            <a href="https://www.curseforge.com/minecraft/mc-mods/iammusicplayer-renewed" class="btn">Download on CurseForge</a>
+            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
+            <p>Thank you for supporting IMPR!</p>
+        </div>
+    </main>
     <script>
         // Mobile menu functionality
         const mobileToggle = document.querySelector('.mobile-toggle');
@@ -86,15 +102,18 @@
             const currentTheme = document.documentElement.getAttribute('data-theme');
             const newTheme = currentTheme === 'light' ? 'dark' : 'light';
             const themeButton = document.querySelector('.theme-toggle');
+            const mobileThemeButton = document.querySelector('.mobile-theme-toggle');
 
             document.documentElement.setAttribute('data-theme', newTheme);
             localStorage.setItem('theme', newTheme);
 
-            // Update button text
+            // Update button text for both desktop and mobile
             if (newTheme === 'light') {
-                themeButton.textContent = '☀️ Light';
+                if (themeButton) themeButton.textContent = '☀️ Light';
+                if (mobileThemeButton) mobileThemeButton.textContent = '☀️ Light';
             } else {
-                themeButton.textContent = '🌙 Dark';
+                if (themeButton) themeButton.textContent = '🌙 Dark';
+                if (mobileThemeButton) mobileThemeButton.textContent = '🌙 Dark';
             }
         }
 
@@ -102,13 +121,16 @@
         document.addEventListener('DOMContentLoaded', () => {
             const savedTheme = localStorage.getItem('theme') || 'dark';
             const themeButton = document.querySelector('.theme-toggle');
+            const mobileThemeButton = document.querySelector('.mobile-theme-toggle');
 
             document.documentElement.setAttribute('data-theme', savedTheme);
 
             if (savedTheme === 'light') {
-                themeButton.textContent = '☀️ Light';
+                if (themeButton) themeButton.textContent = '☀️ Light';
+                if (mobileThemeButton) mobileThemeButton.textContent = '☀️ Light';
             } else {
-                themeButton.textContent = '🌙 Dark';
+                if (themeButton) themeButton.textContent = '🌙 Dark';
+                if (mobileThemeButton) mobileThemeButton.textContent = '🌙 Dark';
             }
         });
     </script>
