--- a/oer.html
+++ b/oer.html
@@ -27,6 +27,7 @@
                         <a href="oer.html">Otyacraft Engine Renewed</a>
                     </div>
                 </li>
+                <li><button class="mobile-theme-toggle" onclick="toggleTheme()">🌙 Dark</button></li>
             </ul>
 
             <button class="theme-toggle" onclick="toggleTheme()">🌙 Dark</button>
@@ -38,24 +39,38 @@
             </div>
         </div>
     </nav>
-    <div class="content">
+    <!-- Main Content -->
+    <main class="main-content">
         <h1>OER (Otyacraft Engine Renewed)</h1>
         <p>OER, or Otyacraft Engine Renewed, is our project dedicated to updating the Otyacraft Engine to be compatible with the newest modloader versions for Minecraft.</p>
-        <h2>About Otyacraft Engine</h2>
-        <p>Otyacraft Engine is a core mod that provides essential functionality and API for other Otyacraft mods. It's a fundamental part of the Otyacraft mod ecosystem, but it required updates to work with modern modloader versions.</p>
-        <h2>OER's Features</h2>
-        <ul>
-            <li><strong>Modern Modloader Compatibility:</strong> Updated to work seamlessly with the latest versions of popular modloaders.</li>
-            <li><strong>Stability Improvements:</strong> Addressed compatibility issues and bugs from the original engine.</li>
-            <li><strong>Continued Support:</strong> We are committed to keeping OER up-to-date and reliable.</li>
-            <li><strong>API Maintenance:</strong> Ensuring that the core API remains functional and usable for other Otyacraft mods.</li>
-        </ul>
-        <h2>Our Goal</h2>
-        <p>Our goal with OER is to ensure that the Otyacraft mod ecosystem can continue to thrive on modern Minecraft versions. By updating the core engine, we are enabling other Otyacraft mods to remain relevant and enjoyable.</p>
-        <h2>Download and Support</h2>
-        <p>Stay tuned for download links and updates. Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on OER's development.</p>
-        <p>Thank you for supporting OER!</p>
-    </div>
+
+        <div class="card">
+            <h2>About Otyacraft Engine</h2>
+            <p>Otyacraft Engine is a core mod that provides essential functionality and API for other Otyacraft mods. It's a fundamental part of the Otyacraft mod ecosystem, but it required updates to work with modern modloader versions.</p>
+        </div>
+
+        <div class="card">
+            <h2>OER's Features</h2>
+            <ul>
+                <li><strong>Modern Modloader Compatibility:</strong> Updated to work seamlessly with the latest versions of popular modloaders.</li>
+                <li><strong>Stability Improvements:</strong> Addressed compatibility issues and bugs from the original engine.</li>
+                <li><strong>Continued Support:</strong> We are committed to keeping OER up-to-date and reliable.</li>
+                <li><strong>API Maintenance:</strong> Ensuring that the core API remains functional and usable for other Otyacraft mods.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>Our Goal</h2>
+            <p>Our goal with OER is to ensure that the Otyacraft mod ecosystem can continue to thrive on modern Minecraft versions. By updating the core engine, we are enabling other Otyacraft mods to remain relevant and enjoyable.</p>
+        </div>
+
+        <div class="card">
+            <h2>Download and Support</h2>
+            <p>Stay tuned for download links and updates.</p>
+            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
+            <p>Thank you for supporting OER!</p>
+        </div>
+    </main>
     <script>
         // Mobile menu functionality
         const mobileToggle = document.querySelector('.mobile-toggle');
@@ -87,15 +102,18 @@
             const currentTheme = document.documentElement.getAttribute('data-theme');
             const newTheme = currentTheme === 'light' ? 'dark' : 'light';
             const themeButton = document.querySelector('.theme-toggle');
+            const mobileThemeButton = document.querySelector('.mobile-theme-toggle');
 
             document.documentElement.setAttribute('data-theme', newTheme);
             localStorage.setItem('theme', newTheme);
 
-            // Update button text
+            // Update button text for both desktop and mobile
             if (newTheme === 'light') {
-                themeButton.textContent = '☀️ Light';
+                if (themeButton) themeButton.textContent = '☀️ Light';
+                if (mobileThemeButton) mobileThemeButton.textContent = '☀️ Light';
             } else {
-                themeButton.textContent = '🌙 Dark';
+                if (themeButton) themeButton.textContent = '🌙 Dark';
+                if (mobileThemeButton) mobileThemeButton.textContent = '🌙 Dark';
             }
         }
 
@@ -103,13 +121,16 @@
         document.addEventListener('DOMContentLoaded', () => {
             const savedTheme = localStorage.getItem('theme') || 'dark';
             const themeButton = document.querySelector('.theme-toggle');
+            const mobileThemeButton = document.querySelector('.mobile-theme-toggle');
 
             document.documentElement.setAttribute('data-theme', savedTheme);
 
             if (savedTheme === 'light') {
-                themeButton.textContent = '☀️ Light';
+                if (themeButton) themeButton.textContent = '☀️ Light';
+                if (mobileThemeButton) mobileThemeButton.textContent = '☀️ Light';
             } else {
-                themeButton.textContent = '🌙 Dark';
+                if (themeButton) themeButton.textContent = '🌙 Dark';
+                if (mobileThemeButton) mobileThemeButton.textContent = '🌙 Dark';
             }
         });
     </script>
